<resources>
    <string name="app_name">Musafir</string>
    <string name="google_map_api_key">AIzaSyDzdB4KBcbL0xT4XPnBG4sZuqIKEM4G16s</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>


    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>



    <string name="places_lt">Pick a destination</string>
    <string name="action_search_lt">Choose Lecture Theatres to go</string>
    <string name="activity_login">Login</string>
    <string name="login_button">Login</string>
    <string name="password_text">Password</string>
    <string name="admin_text">Admin</string>
    <string name="activity_compass">Compass</string>
    <string name="activity_wifi">Wifi Scans</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_learn_wifi">Learn Wifi</string>
    <string name="server_url" translatable="false">https://ec2-18-191-20-227.us-east-2.compute.amazonaws.com/</string>
    <string name="server_api_key" translatable="false">aQer6790fg#$gt67</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoiZ3JlZWtnZWVrIiwiYSI6ImNqaHZlZmhrNDA0ajkzcW1kODRtMHZ5MmYifQ.1AxqPHxWVqkZHQtJYmEZJw</string>
    <string name="title_activity_upload_confirmation">Upload Confirmation</string>

    <string name="title_activity_climb_stair">ClimbStairActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
