<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textEmailReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/email_registration"
                    android:textColor="@color/turquoise"
                    android:textColorHint="#FF0000"
                    android:textSize="28sp" />


                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="386dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/textEmailReg"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="#2196F3"
                    android:textColorHint="#FFFEFE"
                    android:textSize="24sp" />


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="374dp"
                    android:layout_height="58dp"
                    android:layout_below="@+id/input_email"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#2196F3"
                    android:textColorHint="#F4ECEC"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="377dp"
                    android:layout_height="59dp"
                    android:layout_below="@+id/input_password"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="#2196F3"
                    android:textColorHint="#EFEBEB"
                    android:textSize="24sp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="385dp"
                    android:layout_height="65dp"
                    android:layout_below="@+id/input_confirm_password"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/theme_button"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/register"
                    android:textSize="24sp" />

            </RelativeLayout>



        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>

</RelativeLayout>