<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="20dp">


            <EditText
                android:id="@+id/email"
                android:layout_width="371dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="#2196F3"
                android:textColorHint="#F4EFEF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#2196F3"
                android:textColorHint="#DFD8D8"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/theme_button"
                android:fontFamily="@font/aclonica"
                android:text="@string/sign_in"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="89dp">


                <TextView
                    android:id="@+id/link_register"
                    android:layout_width="137dp"
                    android:layout_height="61dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/linkBlue"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:visibility="invisible" />

</RelativeLayout>